--- a/denoising.ipynb
+++ b/denoising.ipynb
@@ -3,16 +3,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/hanxiang527/Practices_1/blob/main/denoising.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "y6rpzQ73jrGN"
       },
       "source": [
@@ -57,6 +47,7 @@
         "from __future__ import print_function\n",
         "import matplotlib.pyplot as plt\n",
         "%matplotlib inline\n",
+        "\n",
         "\n",
         "import os\n",
         "#os.environ['CUDA_VISIBLE_DEVICES'] = '3'\n",
@@ -318,8 +309,7 @@
       "version": "3.6.9"
     },
     "colab": {
-      "provenance": [],
-      "include_colab_link": true
+      "provenance": []
     }
   },
   "nbformat": 4,
